--- a/PrimaryPipelineSetup/sections/step3_Reference_Selector_Tool.html
+++ b/PrimaryPipelineSetup/sections/step3_Reference_Selector_Tool.html
@@ -1,5 +1,5 @@
 <nav class="breadcrumb">
-    <button onclick="window.location.href='index.html'"><i class="fa fa-fw fa-home"></i> Home</button>
+    <button onclick="loadHome()"><i class="fa fa-fw fa-home"></i> Home</button>
     <span>&rsaquo;</span>
     <button onclick="loadStep('step3')"> Reference Input Files</button>
     <span>&rsaquo;</span>
@@ -16,19 +16,23 @@
     <h2>Reference File Information</h2>
     <div class="checkbox-section">
                     <h4>Please check the box that applies to your experimental assay type(s).</h4>
+                    <div class="alert alert-reference" display="none" id="alert-reference">
+                        <b>To review</b> Please scroll down to see the content.
+                      </div>
+                      
                     <label class="ref-container">WTA
-                        <input type="checkbox" id="assay1" name="assay1" value="wta" onclick="showCheckboxInfo('assay1', 'wtatext')">
+                        <input type="checkbox" id="assay1" name="assay1" value="wta" onclick="showCheckboxInfo('assay1', 'wtatext'), showAlert()">
                         <span class="checkmark"></span></label><br>
 
                     <label class="ref-container">AbSeq
                         <input type="checkbox" id="assay2" name="assay2" value="abseq" onclick="showCheckboxInfo('assay2', 'abseqtext')">
                         <span class="checkmark"></span></label><br>
 
-                    <label class="ref-container">Targeted
+                    <label class="ref-container">Targeted - Predesign Panel
                         <input type="checkbox" id="assay3" name="assay3" value="abseq" onclick="showCheckboxInfo('assay3', 'targetedtext')">
                         <span class="checkmark"></span></label><br>
 
-                    <label class="ref-container">Custom Design Panel
+                    <label class="ref-container">Targeted - Custom Design Panel
                         <input type="checkbox" id="assay4" name="assay4" value="supp" onclick="showCheckboxInfo('assay4', 'supptext')">
                         <span class="checkmark"></span></label><br>
 
@@ -44,6 +48,9 @@
                         <input type="checkbox" id="assay8" name="assay8" value="smk" onclick="showCheckboxInfo('assay8', 'smktext')">
                         <span class="checkmark"></span></label><br>
                 </div>
+
+                
+
                     <div class="card" id="wtatext" style="display:none; background-color: #f1f1f1;">
                         <h3>Reference files required for WTA </h3>
                         <p>There are pre-build BD Rhapsody&trade; reference for WTA.</p>
@@ -85,7 +92,7 @@
                             <br><li><b>Example of fasta file for AbSeq:</b>
                             <ol type="I">
                                 <li>Fastq header Image <br>
-                                <img class="steps-img" src="./assets/images/abseqRef_fasta.png"></li>
+                                <img class="steps-img" src="../assets/images/abseqRef_fasta.png"></li>
                                 <li>Detail on the FASTA header: <p class="notice">AntibodyName:clone|GeneSymbol|SeqID|pAbO</p></li>
                                 <ol type="i">
                                     <li><b>AntibodyName:clone</b>: The antibody and clone name in BD's catalog.</li>
