--- a/PrimaryPipelineSetup/sections/step1_Docker_Based(MacOS).html
+++ b/PrimaryPipelineSetup/sections/step1_Docker_Based(MacOS).html
@@ -1,5 +1,5 @@
 <nav class="breadcrumb">
-    <button onclick="window.location.href='index.html'"><i class="fa fa-fw fa-home"></i> Home</button>
+    <button onclick="loadHome()"><i class="fa fa-fw fa-home"></i> Home</button>
     <span>&rsaquo;</span>
     <button onclick="loadStep('step1')"> Pipeline Setup</button>
     <span>&rsaquo;</span>
