--- a/PrimaryPipelineSetup/sections/step1_Velsera_Platform.html
+++ b/PrimaryPipelineSetup/sections/step1_Velsera_Platform.html
@@ -1,5 +1,5 @@
 <nav class="breadcrumb">
-    <button onclick="window.location.href='index.html'"><i class="fa fa-fw fa-home"></i> Home</button>
+    <button onclick="loadHome()"><i class="fa fa-fw fa-home"></i> Home</button>
     <span>&rsaquo;</span>
     <button onclick="loadStep('step1')"> Pipeline Setup</button>
     <span>&rsaquo;</span>
@@ -24,13 +24,13 @@ to register your account.</li>
 <li>At the top of the dashboard, click Projects > Create a project.</li>
 <li>Enter a descriptive and concise project name for easy identification, and adjust the project URL if necessary.</li>
 <li>Ensure that the Billing Group and Location remain unchanged. Confirm that Spot instances and Memoization are enabled. Memoization facilitates the automatic reuse of intermediate files during reruns.</li><br>
-<img src = "./assets/images/createproject.png" width = "400" height = "400"><br>
+<img src = "../assets/images/createproject.png" width = "400" height = "400"><br>
 
 <li>Click on Create. Seven Bridges Genomics will then present the new project dashboard.</li>
 <li>After the project is successfully created, if you wish to modify the retention period of intermediate files, navigate to Settings in the top right corner. Input an integer value between 1 and 120 in the Retention period box to specify the desired number of hours for retention, and then click "Save".</li>
 </ol>
 
 <div class="video-container" >
-<video style="width: 500px;" controls poster = "./assets/videos/SB_createProject_cover.png">
-<source src="./assets/videos/SB_createNewProject.mp4" type="video/mp4"></video>
+<video style="width: 500px;" controls poster = "../assets/videos/SB_createProject_cover.png">
+<source src="../assets/videos/SB_createNewProject.mp4" type="video/mp4"></video>
 </div>
