--- a/PrimaryPipelineSetup/sections/step3_Custom_Reference_Guide.html
+++ b/PrimaryPipelineSetup/sections/step3_Custom_Reference_Guide.html
@@ -1,5 +1,5 @@
 <nav class="breadcrumb">
-    <button onclick="window.location.href='index.html'"><i class="fa fa-fw fa-home"></i> Home</button>
+    <button onclick="loadHome()"><i class="fa fa-fw fa-home"></i> Home</button>
     <span>&rsaquo;</span>
     <button onclick="loadStep('step3')"> Reference Input Files</button>
     <span>&rsaquo;</span>
@@ -21,11 +21,11 @@
                         <li>Reference files available from public databases:
                             <ul>
                                 <li><a href="https://www.ncbi.nlm.nih.gov/datasets/genome/" target="_blank">NCBI</a><br>
-                                <img class="steps-img" src="./assets/images/ncbi.png"> </li>
+                                <img class="steps-img" src="../assets/images/ncbi.png"> </li>
                                 <li><a href="https://www.ensembl.org/index.html" target="_blank">Ensembl</a>
                                     <ol>
                                         <p>To generate custom reference files compatible with BD Rhapsody Pipeline, you can download the necessary files from Ensembl.<br>
-                                        <img class="steps-img" src="./assets/images/ensemble.png">
+                                        <img class="steps-img" src="../assets/images/ensemble.png">
                                         <p>Follow the steps below to retrieve files to generate custom genome:</p>
                                         <li>Navigate to <b>"Download FASTA"</b> and download Primary Assembly or an equivalent of Top-level assembly. </li>
                                         <li>Navigate to <b>"Download GTF"</b> to download the gtf file. </li>
