--- a/PrimaryPipelineSetup/sections/step4_Other_Pipeline_Settings.html
+++ b/PrimaryPipelineSetup/sections/step4_Other_Pipeline_Settings.html
@@ -1,5 +1,5 @@
 <nav class="breadcrumb">
-    <button onclick="window.location.href='index.html'"><i class="fa fa-fw fa-home"></i> Home</button>
+    <button onclick="loadHome()"><i class="fa fa-fw fa-home"></i> Home</button>
     <span>&rsaquo;</span>
     <button onclick="loadStep('step4')"> Pipeline Run Settings</button>
     <span>&rsaquo;</span>
