--- a/PrimaryPipelineSetup/steps/step1.html
+++ b/PrimaryPipelineSetup/steps/step1.html
@@ -1,5 +1,5 @@
-<nav class="breadcrumb">
-    <button onclick="window.location.href='index.html'"><i class="fa fa-fw fa-home"></i> Home</button>
+<nav class="breadcrumb" id="Pipeline_setup">
+    <button onclick="loadHome()"><i class="fa fa-fw fa-home"></i> Home</button>
     <span>&rsaquo;</span>
     <button onclick="loadStep('step1')" style="color:darkgrey"> Pipeline Setup</button>
 </nav>
@@ -7,7 +7,7 @@
 <h2>Setting Up Your Pipeline</h2>
 
 <p>This is an overview to set up your Pipeline Analysis platform. Please follow the menu on the right to navigate on how to set up your BD Rhapsody&trade; Pipeline Analysis.</p>
-<img src="./assets/images/pipeline_flow.gif" style="width:60%;">
+<img src="../assets/images/pipeline_flow.gif" style="width:60%;">
 <div class="card">
     <h2>Pipeline Setup, Requirements and Extra Utilities</h2>
 <p>Setting up Rhapsody&trade; Pipeline using several methods:</p>
