--- a/PrimaryPipelineSetup/steps/step3.html
+++ b/PrimaryPipelineSetup/steps/step3.html
@@ -1,5 +1,5 @@
 <nav class="breadcrumb">
-    <button onclick="window.location.href='index.html'"><i class="fa fa-fw fa-home"></i> Home</button>
+    <button onclick="loadHome()"><i class="fa fa-fw fa-home"></i> Home</button>
     <span>&rsaquo;</span>
     <button onclick="loadStep('step2')" style="color:darkgrey"> Reference Files</button>
 </nav>
@@ -13,7 +13,7 @@
     <li><b>Reference Selector Tool:</b>
         <p>This is an integrative app with checkboxes for all assays within the BD Rhapsody&trade; System. Check the box, and further information about the reference files will be displayed at the bottom of the page.</p></li>
     <li><b>Custom Reference Guide:</b>
-        <p>This guide explains how to navigate and retrieve reference files based on your species and assembly. The <a href="./sections/step1_Extra Utilities.html">extra utilities</a> menu in the first step contains the information needed to create your custom reference. However, if you face any difficulties, please get in touch, and we will help you create your custom reference.</p></li>
+        <p>This guide explains how to navigate and retrieve reference files based on your species and assembly. The <a href="../sections/step1_Extra Utilities.html">extra utilities</a> menu in the first step contains the information needed to create your custom reference. However, if you face any difficulties, please get in touch, and we will help you create your custom reference.</p></li>
     <li><b>AbSeq Reference:</b>
         <p>This section shows the steps to generate your own AbSeq reference.</p></li>
 </ul>
