--- a/PrimaryPipelineSetup/steps/step4.html
+++ b/PrimaryPipelineSetup/steps/step4.html
@@ -1,5 +1,5 @@
 <nav class="breadcrumb">
-    <button onclick="window.location.href='index.html'"><i class="fa fa-fw fa-home"></i> Home</button>
+    <button onclick="loadHome()"><i class="fa fa-fw fa-home"></i> Home</button>
     <span>&rsaquo;</span>
     <button onclick="loadStep('step2')" style="color:darkgrey"> Pipeline Run Settings</button>
 </nav>
@@ -7,7 +7,7 @@
 
 <h2>Run your BD Rhapsody&trade; Pipeline</h2>
 
-<img src="./assets/images/pipeline_flow.gif" style="width:60%;">
+<img src="../assets/images/pipeline_flow.gif" style="width:60%;">
 
     <p>Now that you have set up your pipeline, uploaded your sequencing data, and selected your reference files, you are ready to run the BD Rhapsody&trade; Pipeline. First, you need to select the menu on the right, whether you are running your pipeline on the Cloud Platform (Velsera) or Locally.</p>
 
