Revert "testing release 30th April"
This reverts commit 08df6d3d14233a6d6e8e4d1b73b2e591c8ff8098.

--- a/PrimaryPipelineSetup/sections/step4_Run_Locally.html
+++ b/PrimaryPipelineSetup/sections/step4_Run_Locally.html
@@ -6,11 +6,6 @@
     <button onclick="loadSection('step4_Run_Locally')" style="color:darkgrey">Local Run Pipeline Settings</button>
 </nav>
 <div id="topPage"></div>
-<div class="fab-container">
-    <div class="button iconbutton" onclick="loadStep('feedback')">
-        <span>Share your feedback</span>
-    </div>
-</div>
 
 <h2>Select your assay combination to view example input files and pipeline settings.</h2>
 <div class="image-container">
@@ -36,3 +31,6 @@
         <img class="ref-img" id="defaultImage2" src="../assets/images/localSetup_wta.png" width = "900">
     </div>
     
+    <div class="scroll-top">
+        <button><a href="#topPage">Scroll to top page</a></button>
+    </div>
