--- a/PrimaryPipelineSetup/index.html
+++ b/PrimaryPipelineSetup/index.html
@@ -32,7 +32,7 @@
         <div class="container">
                 <header class="banner-header">
                     <div class="logo-section">
-                      <img src="../assets/images/plusOmics.png" alt="BD Rhapsody Logo" class="logo-img">
+                      <img src="./assets/images/plusOmics.png" alt="BD Rhapsody Logo" class="logo-img">
                       <div class="header-text" >
                         <div class="subheading" id="subheading">YOUR QUICK START GUIDE</div>
                         <h1>BD RHAPSODY&trade; PIPELINE</h1>
@@ -115,7 +115,7 @@
              <main id="content">
                 <h2> Welcome to the Quick Start Guide</h2>
                 <p>This guide is designed to help you get started with the BD Rhapsody&trade; Pipeline.</p>
-                <img src="../assets/images/pipeline_flow.gif" style="width:60%;">
+                <img src="./assets/images/pipeline_flow.gif" style="width:60%;">
                    
                 <p>The BD Rhapsody&trade; Pipeline is a analysis workflow that processes raw sequencing data from the BD Rhapsody&trade; system to generate experimental overview as well as output files that generated to proceed with secondary analysis. It is designed to be user-friendly and accessible to all BD Rhapsody&trade; customers.</p>
                 <h3>What can the BD Rhapsody&trade; Pipeline do?</h3>
