Added feedback form and sticky button

--- a/PrimaryPipelineSetup/sections/step2_Cloud_Based_Upload.html
+++ b/PrimaryPipelineSetup/sections/step2_Cloud_Based_Upload.html
@@ -6,7 +6,11 @@
     <button onclick="loadSection('step2_Cloud_Based_Upload')" style="color:darkgrey">Velsera Interface Files Upload</button>
 </nav>
 <div id="topPage"></div>
-
+<div class="fab-container">
+    <div class="button iconbutton" onclick="loadStep('feedback')">
+        <span>Share your feedback</span>
+    </div>
+</div>
 <h2>How to Upload your files on Velsera</h2>
 <h3>Click below to jump straight to the section:</h3>
 <ul>
