--- a/PrimaryPipelineSetup/sections/step3_Custom_Reference_Guide.html
+++ b/PrimaryPipelineSetup/sections/step3_Custom_Reference_Guide.html
@@ -6,7 +6,11 @@
     <button onclick="loadSection('step3_AbSeq_Custom_Reference')" style="color:darkgrey">Custom Reference: WTA/ATAC</button>
 </nav>
 <div id="topPage"></div>
-
+<div class="fab-container">
+    <div class="button iconbutton" onclick="loadStep('feedback')">
+        <span>Share your feedback</span>
+    </div>
+</div>
 <h2>Custom Reference</h2>
                 <p>Custom Reference is a feature that allows you to upload your own reference files to the BD Rhapsody&trade; Pipeline. This feature is useful when you have a species other than human or mouse that is not available in the pre-built references provided by BD. </p>
                 <p>
