--- a/PrimaryPipelineSetup/sections/step4_Run_on_Velsera.html
+++ b/PrimaryPipelineSetup/sections/step4_Run_on_Velsera.html
@@ -6,7 +6,11 @@
     <button onclick="loadSection('step4_Run_on_Velsera')" style="color:darkgrey">Velsera Pipeline Settings</button>
 </nav>
 <div id="topPage"></div>
-
+<div class="fab-container">
+    <div class="button iconbutton" onclick="loadStep('feedback')">
+        <span>Share your feedback</span>
+    </div>
+</div>
 
 <h2>Select your assay combination to view example input files and pipeline settings.</h2>
 <div class="image-container">
