--- a/PrimaryPipelineSetup/sections/step5_Pipeline_Report_HTML.html
+++ b/PrimaryPipelineSetup/sections/step5_Pipeline_Report_HTML.html
@@ -6,7 +6,11 @@
   <button onclick="loadSection('step5_Pipeline_Report_HTML')" style="color:darkgrey">HTML Report</button>
 </nav>
 <div id="topPage"></div>
-
+<div class="fab-container">
+  <div class="button iconbutton" onclick="loadStep('feedback')">
+      <span>Share your feedback</span>
+  </div>
+</div>
 <h2>Pipeline Report HTML:</h2>
 <br>
 <p class="code">File:[sample_name]_Pipeline_Report.html</p>
