--- a/PrimaryPipelineSetup/steps/step1.html
+++ b/PrimaryPipelineSetup/steps/step1.html
@@ -3,6 +3,11 @@
     <span>&rsaquo;</span>
     <button onclick="loadStep('step1')" style="color:darkgrey"> Pipeline Setup</button>
 </nav>
+<div class="fab-container">
+    <div class="button iconbutton" onclick="loadStep('feedback')">
+        <span>Share your feedback</span>
+    </div>
+</div>
 
 <h2>Setting Up Your Pipeline</h2>
 
