--- a/PrimaryPipelineSetup/steps/step2.html
+++ b/PrimaryPipelineSetup/steps/step2.html
@@ -3,7 +3,11 @@
     <span>&rsaquo;</span>
     <button onclick="loadStep('step2')" style="color:darkgrey"> Files Upload</button>
 </nav>
-
+<div class="fab-container">
+    <div class="button iconbutton" onclick="loadStep('feedback')">
+        <span>Share your feedback</span>
+    </div>
+</div>
 <h2>Upload Files to Velsera Platfrom</h2>
 
 <h3>For Local Installation Users:</h3>
