--- a/PrimaryPipelineSetup/steps/step3.html
+++ b/PrimaryPipelineSetup/steps/step3.html
@@ -3,6 +3,11 @@
     <span>&rsaquo;</span>
     <button onclick="loadStep('step2')" style="color:darkgrey"> Reference Files</button>
 </nav>
+<div class="fab-container">
+    <div class="button iconbutton" onclick="loadStep('feedback')">
+        <span>Share your feedback</span>
+    </div>
+</div>
 
 <h2>Reference Files</h2>
 
