--- a/PrimaryPipelineSetup/steps/step5.html
+++ b/PrimaryPipelineSetup/steps/step5.html
@@ -3,7 +3,11 @@
     <span>&rsaquo;</span>
     <button onclick="loadStep('step2')" style="color:darkgrey"> Pipeline Output Files </button>
 </nav>
-
+<div class="fab-container">
+    <div class="button iconbutton" onclick="loadStep('feedback')">
+        <span>Share your feedback</span>
+    </div>
+</div>
 
 <h2> Pipeline Output Files</h2><br>
 <h3>What is this Chapter for?</h3>
