--- a/PrimaryPipelineSetup/sections/step2_CLI_(MacOS).html
+++ b/PrimaryPipelineSetup/sections/step2_CLI_(MacOS).html
@@ -6,7 +6,11 @@
     <button onclick="loadSection('step2_CLI_(MacOS)')" style="color:darkgrey">Command Line Interface Upload MacOS</button>
 </nav>
 <div id="topPage"></div>
-
+<div class="fab-container">
+    <div class="button iconbutton" onclick="loadStep('feedback')">
+        <span>Share your feedback</span>
+    </div>
+</div>
 <h2>Command Line Interface Upload (MacOS/LINUX)</h2>
             <div class="notice">
                 There are TWO main steps to setup your file upload through Command Line Interface (CLI). 
