--- a/PrimaryPipelineSetup/steps/step4.html
+++ b/PrimaryPipelineSetup/steps/step4.html
@@ -3,7 +3,11 @@
     <span>&rsaquo;</span>
     <button onclick="loadStep('step2')" style="color:darkgrey"> Pipeline Run Settings</button>
 </nav>
-
+<div class="fab-container">
+    <div class="button iconbutton" onclick="loadStep('feedback')">
+        <span>Share your feedback</span>
+    </div>
+</div>
 
 <h2>Run your BD Rhapsody&trade; Pipeline</h2>
 
