Added feedback form and sticky button

--- a/PrimaryPipelineSetup/steps/step1.html
+++ b/PrimaryPipelineSetup/steps/step1.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <nav class="breadcrumb" id="Pipeline_setup">
     <button onclick="loadHome()"><i class="fa fa-fw fa-home"></i> Home</button>
     <span>&rsaquo;</span>
@@ -9,7 +11,7 @@
     </div>
 </div>
 
-<h2>Setting Up Your Pipeline</h2>
+<h2>Setting Up Your Analysis Pipeline</h2>
 
 <p>This is an overview to set up your Pipeline Analysis platform. Please follow the menu on the right to navigate on how to set up your BD Rhapsody&trade; Pipeline Analysis.</p>
 <img src="../assets/images/pipeline_flow.gif" style="width:60%;">
@@ -50,3 +52,4 @@
 <li><b><a onclick="loadSection('step1_Extra_Utilities')">Annotate Cell Label and UMI only: </a></b><br>Given pairs of R1/R2 FASTQ files from BD Rhapsody&trade; libraries, only annotate the cell label and UMI of R1 and put it in the header of R2.</li>
 </ul></div>
 </div>
+
