--- a/PrimaryPipelineSetup/steps/step2.html
+++ b/PrimaryPipelineSetup/steps/step2.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <nav class="breadcrumb">
     <button onclick="loadHome()"><i class="fa fa-fw fa-home"></i> Home</button>
     <span>&rsaquo;</span>
