--- a/PrimaryPipelineSetup/index.html
+++ b/PrimaryPipelineSetup/index.html
@@ -3,7 +3,7 @@
     <head>  
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>BDRhapsody&trade; Pipeline Quick Start Guide</title>
-        <link rel="stylesheet" href="assets/CSS/styles.css">    
+        <link rel="stylesheet" href="/PrimaryPipelineSetup/assets/CSS/styles.css">    
         <link rel="apple-touch-icon" sizes="57x57" href="../assets/images/XpressFavicon.ico/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="../assets/images/XpressFavicon.ico/apple-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="../assets/images/XpressFavicon.ico/apple-icon-72x72.png">
@@ -21,9 +21,8 @@
         <meta name="msapplication-TileColor" content="#ffffff">
         <meta name="msapplication-TileImage" content="../assets/images/XpressFavicon.ico/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
-
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-        
+        <script src="/PrimaryPipelineSetup/assets/js/scripts.js" defer></script>
 
         
     </head>
@@ -32,7 +31,7 @@
         <div class="container">
                 <header class="banner-header">
                     <div class="logo-section">
-                      <img src="./assets/images/plusOmics.png" alt="BD Rhapsody Logo" class="logo-img">
+                      <img src="/PrimaryPipelineSetup/assets/images/plusOmics.png" alt="BD Rhapsody Logo" class="logo-img">
                       <div class="header-text" >
                         <div class="subheading" id="subheading">YOUR QUICK START GUIDE</div>
                         <h1>BD RHAPSODY&trade; PIPELINE</h1>
@@ -107,6 +106,8 @@
                         <button href="#" onclick="loadSection('step5_VDJ_PerCell')">VDJ Per Cell</button><br>
                         <button href="#" onclick="loadSection('step5_VDJ_Contigs_AIRR')">AIRR</button><br>
                     </div>
+
+                    <button class="nav-button" onclick="toggleSubStep('feedback')">Feedback Form</button><br>
                 </div>
         </nav>
 
@@ -175,7 +176,7 @@
 
         </div>
     </div>
-    <script src="assets/js/scripts.js"></script>
+   
     </body>
 
 </html>
