--- a/PrimaryPipelineSetup/steps/step3.html
+++ b/PrimaryPipelineSetup/steps/step3.html
@@ -1,3 +1,5 @@
+<!doctype html>
+
 <nav class="breadcrumb">
     <button onclick="loadHome()"><i class="fa fa-fw fa-home"></i> Home</button>
     <span>&rsaquo;</span>
