fixing path for images and videos

--- a/PrimaryPipelineSetup/index.html
+++ b/PrimaryPipelineSetup/index.html
@@ -23,8 +23,6 @@
         <meta name="msapplication-TileImage" content="/assets/images/XpressFavicon.ico/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-        
-        
     </head>
 
     <body>
@@ -42,7 +40,7 @@
             </header>
 
 
-            <div class="content-area ">
+            <div class="content-area">
                 <!-- Left Navigation Sidebar -->
                 <nav class="sidebar-left"> 
                 <h4>Chapters:</h4>
@@ -174,6 +172,10 @@
              </nav>
 
         </div>
+    </div>
+
+    <div class="footer">
+        <p>Developer: Syabira Yusoff | Bioinformatics Support Engineer | <a href="mailto:syabira.yusoff@bd.com">syabira.yusoff@bd.com</a></p>
     </div>
     <script src="assets/js/scripts.js"></script>
     </body>
