final checks on file path and added base path

--- a/PrimaryPipelineSetup/sections/step2_CLI_(Windows).html
+++ b/PrimaryPipelineSetup/sections/step2_CLI_(Windows).html
@@ -26,11 +26,11 @@
                 Below are the steps to generate API Endpoint and Authentication Token: <br>
                 <ol>
                     <li>Log in to your Seven Bridges account. Click <mark>Developer</mark> -> <mark>Authentication token</mark> -> <mark>Generate token</mark>.</li><br>
-                    <img class="steps-img" src="./assets/images/autehnticationstep1.png"><br><br>
+                    <img class="steps-img" src="assets/images/autehnticationstep1.png"><br><br>
                     <li>You will find the TOken and API on the next page.Ensure to keep your Authentication Token secure and do not share it publicly.</li>
                     <li>You may now use these credentials while setting up your upload process to authenticate and interact with Seven Bridges through the API.</li>
                     <li>Picture below showing the API and Authentication Token:</li>
-                    <br><img class="steps-img" src="./assets/images/authenticationTokenStep2.png"><br>
+                    <br><img class="steps-img" src="assets/images/authenticationTokenStep2.png"><br>
                 </ol>
             </div>
 
@@ -47,7 +47,7 @@
                     <li>Navigate to your working folder in the command prompt.If unsure, please click the link <a href="https://www.howtogeek.com/674537/how-to-find-and-open-files-using-command-prompt/">here</a> on how to find files using command prompt.</li>
                     <li>Enter command below to confirm the ".exe" and your files are in the correct folder. You should find the ".exe" file and the rest of the files you intend to upload listed on your console.<br>
                     <p class="code">DIR</p>
-                <img class="steps-img" src="./assets/images/DIR_files.png"></li>
+                <img class="steps-img" src="assets/images/DIR_files.png"></li>
                 <p><b>Configure CLI</b></p>
                 <li>Use command below to configure CLI:
                     <p class="code">sb configure</p>
@@ -69,8 +69,8 @@
                         </li>
                         <li>Once completed, the output for intact files would be "OK". If the file is corrupted, especially CRC error, please re-download the file from source and test again. </li>
                         <div class="video-container" >
-                            <video style="width: 500px;" controls poster = "./assets/videos/FIleIntegrityCheck.png">
-                            <source src="./assets/videos/integrityChecks.mov" type="video/mp4"></video></div>
+                            <video style="width: 500px;" controls poster = "assets/videos/FIleIntegrityCheck.png">
+                            <source src="assets/videos/integrityChecks.mov" type="video/mp4"></video></div>
             </ol>
             </div>
 
@@ -91,8 +91,8 @@
             <div class="card">
                 <h3>CLI Configuration and File Upload</h3>
                 <div class="video-container" >
-                    <video style="width: 500px;" controls poster = "./assets/videos/sbConfigure_FileUpload.png">
-                    <source src="./assets/videos/sbConfigure_FileUpload.mov" type="video/mp4"></video></div>
+                    <video style="width: 500px;" controls poster = "assets/videos/sbConfigure_FileUpload.png">
+                    <source src="assets/videos/sbConfigure_FileUpload.mov" type="video/mp4"></video></div>
             </div>
 
             <div class="scroll-top">
