--- a/PrimaryPipelineSetup/sections/step4_Run_Locally.html
+++ b/PrimaryPipelineSetup/sections/step4_Run_Locally.html
@@ -15,24 +15,24 @@
 <h2>Select your assay combination to view example input files and pipeline settings.</h2>
 <div class="image-container">
     <div class="btn-group">
-        <button class="button" onclick="changeImage2('./assets/images/localSetup_wta.png')">WTA</button>
-        <button class="button" onclick="changeImage2('./assets/images/localSetup_wta_AbSeq.png')">WTA+AbSeq</button>
-        <button class="button" onclick="changeImage2('./assets/images/localSetup_wta_abseq_smk.png')">WTA+AbSeq+SMK</button>
-        <button class="button" onclick="changeImage2('./assets/images/localSetup_wta_abseq_smk.png')">WTA+AbSeq+SMK+VDJ</button>
-        <button class="button" onclick="changeImage2('./assets/images/localSetup_targeted.png')">Targeted</button>
-        <button class="button" onclick="changeImage2('./assets/images/localSetup_targeted_abseq.png')">Targeted+AbSeq</button>
-        <button class="button" onclick="changeImage2('./assets/images/localSetup_targeted_abseq_smk.png')">Targeted+AbSeq+SMK</button>
-        <button class="button" onclick="changeImage2('./assets/images/localSetup_targeted_abseq_smk_vdj.png')">Targeted+AbSeq+SMK+VDJ</button>
-        <button class="button" onclick="changeImage2('./assets/images/localSetup_targeted_custom.png')">Targeted+customPanel</button>
-        <button class="button" onclick="changeImage2('./assets/images/localSetup_vdj_wta.png')">VDJ+WTA</button>
-        <button class="button" onclick="changeImage2('./assets/images/localSetup_vdj_targeted.png')">VDJ+Targeted</button>
-        <button class="button" onclick="changeImage2('./assets/images/localSetup_atac.png')">ATAC</button>
-        <button class="button" onclick="changeImage2('./assets/images/localSetup_atacWTA.png')">ATAC+WTA</button>
-        <button class="button" onclick="changeImage2('./assets/images/localSetup_atac_wta_smk.png')">ATAC+WTA+SMK</button>
-        <button class="button" onclick="changeImage2('./assets/images/localSetup_atac_SMK.png')">ATAC+SMK</button>
+        <button class="button" onclick="changeImage2('assets/images/localSetup_wta.png')">WTA</button>
+        <button class="button" onclick="changeImage2('assets/images/localSetup_wta_AbSeq.png')">WTA+AbSeq</button>
+        <button class="button" onclick="changeImage2('assets/images/localSetup_wta_abseq_smk.png')">WTA+AbSeq+SMK</button>
+        <button class="button" onclick="changeImage2('assets/images/localSetup_wta_abseq_smk.png')">WTA+AbSeq+SMK+VDJ</button>
+        <button class="button" onclick="changeImage2('assets/images/localSetup_targeted.png')">Targeted</button>
+        <button class="button" onclick="changeImage2('assets/images/localSetup_targeted_abseq.png')">Targeted+AbSeq</button>
+        <button class="button" onclick="changeImage2('assets/images/localSetup_targeted_abseq_smk.png')">Targeted+AbSeq+SMK</button>
+        <button class="button" onclick="changeImage2('assets/images/localSetup_targeted_abseq_smk_vdj.png')">Targeted+AbSeq+SMK+VDJ</button>
+        <button class="button" onclick="changeImage2('assets/images/localSetup_targeted_custom.png')">Targeted+customPanel</button>
+        <button class="button" onclick="changeImage2('assets/images/localSetup_vdj_wta.png')">VDJ+WTA</button>
+        <button class="button" onclick="changeImage2('assets/images/localSetup_vdj_targeted.png')">VDJ+Targeted</button>
+        <button class="button" onclick="changeImage2('assets/images/localSetup_atac.png')">ATAC</button>
+        <button class="button" onclick="changeImage2('assets/images/localSetup_atacWTA.png')">ATAC+WTA</button>
+        <button class="button" onclick="changeImage2('assets/images/localSetup_atac_wta_smk.png')">ATAC+WTA+SMK</button>
+        <button class="button" onclick="changeImage2('assets/images/localSetup_atac_SMK.png')">ATAC+SMK</button>
     </div>
     
     <div class="scroll"">
-        <img class="ref-img" id="defaultImage2" src="./assets/images/localSetup_wta.png" width = "900">
+        <img class="ref-img" id="defaultImage2" src="assets/images/localSetup_wta.png" width = "900">
     </div>
     
