--- a/PrimaryPipelineSetup/sections/step4_Run_on_Velsera.html
+++ b/PrimaryPipelineSetup/sections/step4_Run_on_Velsera.html
@@ -16,19 +16,19 @@
 <h2>Select your assay combination to view example input files and pipeline settings.</h2>
 <div class="image-container">
     <div class="btn-group" style="flex-grow:1;">
-        <button class="button" onclick="changeImage('./assets/images/SBsetup_WTA.png')">WTA</button>
-        <button class="button" onclick="changeImage('./assets/images/SBsetup_WTA_AbSeq.png')">WTA+AbSeq</button>
-        <button class="button" onclick="changeImage('./assets/images/SBsetup_WTA_AbSeq_SMK.png')">WTA+AbSeq+SMK</button>
-        <button class="button"onclick="changeImage('./assets/images/SBsetup_WTA_AbSeq_SMK_VDJ.png')">WTA+AbSeq+SMK+VDJ</button>
-        <button class="button" onclick="changeImage('./assets/images/SBsetup_targeted.png')">Targeted</button>
-        <button class="button" onclick="changeImage('./assets/images/SBsetup_Targeted_AbSeq.png')">Targeted+AbSeq</button>
-        <button class="button" onclick="changeImage('./assets/images/SBsetup_Targeted_AbSeq_SMK.png')">Targeted+AbSeq+SMK</button>
-        <button class="button" onclick="changeImage('./assets/images/SBsetup_Targeted_AbSeq_SMK_VDJ.png')">Targeted+AbSeq+SMK+VDJ</button>
-        <button class="button" onclick="changeImage('./assets/images/SBsetup_targeted_supplimental.png')">Targeted+customPanel</button>
-        <button class="button" onclick="changeImage('./assets/images/SBsetup_ATAC.png')">ATAC</button>
-        <button class="button" onclick="changeImage('./assets/images/SBsetup_WTA_ATAC.png')">WTA+ATAC</button>
+        <button class="button" onclick="changeImage('assets/images/SBsetup_WTA.png')">WTA</button>
+        <button class="button" onclick="changeImage('assets/images/SBsetup_WTA_AbSeq.png')">WTA+AbSeq</button>
+        <button class="button" onclick="changeImage('assets/images/SBsetup_WTA_AbSeq_SMK.png')">WTA+AbSeq+SMK</button>
+        <button class="button"onclick="changeImage('assets/images/SBsetup_WTA_AbSeq_SMK_VDJ.png')">WTA+AbSeq+SMK+VDJ</button>
+        <button class="button" onclick="changeImage('assets/images/SBsetup_targeted.png')">Targeted</button>
+        <button class="button" onclick="changeImage('assets/images/SBsetup_Targeted_AbSeq.png')">Targeted+AbSeq</button>
+        <button class="button" onclick="changeImage('assets/images/SBsetup_Targeted_AbSeq_SMK.png')">Targeted+AbSeq+SMK</button>
+        <button class="button" onclick="changeImage('assets/images/SBsetup_Targeted_AbSeq_SMK_VDJ.png')">Targeted+AbSeq+SMK+VDJ</button>
+        <button class="button" onclick="changeImage('assets/images/SBsetup_targeted_supplimental.png')">Targeted+customPanel</button>
+        <button class="button" onclick="changeImage('assets/images/SBsetup_ATAC.png')">ATAC</button>
+        <button class="button" onclick="changeImage('assets/images/SBsetup_WTA_ATAC.png')">WTA+ATAC</button>
     </div>
     
     <div class="scroll">
-        <img class="ref-img" id="defaultImage" src="./assets/images/SBsetup_WTA.png" width="900">
+        <img class="ref-img" id="defaultImage" src="assets/images/SBsetup_WTA.png" width="900">
     </div>
