--- a/PrimaryPipelineSetup/sections/step5_Metrics_Summary.html
+++ b/PrimaryPipelineSetup/sections/step5_Metrics_Summary.html
@@ -13,7 +13,7 @@
             Other metrics such as Sample Tag (SMK), VDJ and AbSeq will be generated when it is activated in the pipeline settings. 
             Please see below for further information:</p>
         <figure>
-            <img src="./assets/images/metrics_summary.png" alt="Bioproduct Statistics" width="auto" height="400">
+            <img src="assets/images/metrics_summary.png" alt="Bioproduct Statistics" width="auto" height="400">
             <figcaption>Figure 2: Metrics Summary. Each blue box represent each metrics available as pipeline statistics.</figcaption>
         </figure>
 
