--- a/PrimaryPipelineSetup/sections/step5_SMK_ReadsPerCell.html
+++ b/PrimaryPipelineSetup/sections/step5_SMK_ReadsPerCell.html
@@ -17,7 +17,7 @@
 
 <center>
     <figure>
-    <img src="./assets/images/SMK_readsPerCell.png" style="width:100%; height: auto;">
+    <img src="assets/images/SMK_readsPerCell.png" style="width:100%; height: auto;">
 </figure>
     <figcaption></figcaption>
 </center>
