fix link issue on reference tools

--- a/PrimaryPipelineSetup/sections/step3_Reference_Selector_Tool.html
+++ b/PrimaryPipelineSetup/sections/step3_Reference_Selector_Tool.html
@@ -120,7 +120,7 @@
                                 </ul></li>
                                 <br><li><b>Mouse pre-designed panel:</b>
                                 <ul>
-                                    <li><a href = https://scomix.bd.com/hc/article_attachments/360059289792/BD_Rhapsody_Immune_Response_Panel_Mm_FASTA.fasta">BD Rhapsody™ Immune Response Panel Mm
+                                    <li><a href = "https://scomix.bd.com/hc/article_attachments/360059289792/BD_Rhapsody_Immune_Response_Panel_Mm_FASTA.fasta">BD Rhapsody™ Immune Response Panel Mm
                                     </a></li>
                                 </ul>
                             </ol><br>
