--- a/PrimaryPipelineSetup/index.html
+++ b/PrimaryPipelineSetup/index.html
@@ -46,6 +46,7 @@
                 <nav class="sidebar-left"> 
                 <h4>Chapters:</h4>
                 <div class="sidenav vl">
+                    <button class="nav-button" onclick="toggleSubStep('feedback')">Demo Project on Velsera</button><br>
                     <button class="nav-button" onclick="toggleSubStep('step1')">Pipeline Setup</button><br>
                     <div class="sub-step" id="step1" style="display: none;">
                         <button href="#Velsera_setup" onclick="loadSection('step1_Velsera_Platform')">Velsera Setup</button><br>
